// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle Withdraw Rai components > renders disable withdraw rai correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="max-w-screen-xl mx-auto px-4 lg:px-8"
      >
        <nav
          aria-label="breadcrumbs for spa or waiver choices"
          class="my-4"
          role="navigation"
        >
          <ul
            class="flex flex-wrap gap-1"
          >
            <li
              class="flex items-center text-sm"
            >
              <span>
                <svg
                  class="lucide lucide-chevron-right w-5 h-5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
              <a
                class="underline text-sky-700 hover:text-sky-800"
                data-discover="true"
                href="/dashboard?tab=waivers"
              >
                Dashboard
              </a>
            </li>
            <li
              class="flex items-center text-sm"
            >
              <span>
                <svg
                  class="lucide lucide-chevron-right w-5 h-5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
              <a
                class="underline text-sky-700 hover:text-sky-800"
                data-discover="true"
                href="/details/1915(b)/VA-2234.R11.02"
              >
                VA-2234.R11.02
              </a>
            </li>
            <li
              class="flex items-center text-sm"
            >
              <span>
                <svg
                  class="lucide lucide-chevron-right w-5 h-5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
              <span
                aria-disabled="true"
                class="whitespace-nowrap"
              >
                Enable Formal RAI Response Withdraw
              </span>
            </li>
          </ul>
        </nav>
        <form
          class="my-6 space-y-8 mx-auto justify-center flex flex-col"
        >
          <section
            class="p-4 border rounded-sm border-cardBorder"
            data-testid="detail-section"
          >
            <h1
              class="text-3xl font-semibold mb-2"
              data-testid="detail-section-title"
            >
              Enable Formal RAI Response Withdraw Details
            </h1>
            <hr
              class="my-6 bg-slate-200"
            />
            <div
              class="gap-8 flex flex-col"
              data-testid="detail-section-child"
            >
              <div>
                <div
                  class="mt-4"
                >
                  Once you submit this form, the most recent Formal RAI Response for this package will be able to be withdrawn by the state
                </div>
              </div>
              <section
                class="flex flex-col mb-8 space-y-8"
              >
                <div>
                  <p
                    class="font-bold"
                  >
                    Waiver Number
                  </p>
                  <p
                    class="text-xl"
                  >
                    VA-2234.R11.02
                  </p>
                </div>
                <div>
                  <p
                    class="font-bold"
                  >
                    Authority
                  </p>
                  <p
                    class="text-xl"
                  >
                    1915(b) Waiver
                  </p>
                </div>
              </section>
            </div>
          </section>
          <section
            class="flex justify-end gap-2 p-4 ml-auto"
          >
            <button
              aria-disabled="true"
              class="inline-flex items-center justify-center rounded-md text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none bg-primary text-slate-50 hover:bg-primary-dark disabled:bg-[#E3E3E3] disabled:text-[#4F4F4F] h-10 py-2 px-12"
              data-testid="submit-action-form"
              disabled=""
              type="submit"
            >
              Submit
            </button>
            <button
              class="inline-flex items-center justify-center rounded-md text-[16px] ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none border-2 border-primary text-primary font-bold hover:bg-primary/10 disabled:opacity-50 h-10 py-2 px-12"
              data-testid="cancel-action-form"
              type="reset"
            >
              Cancel
            </button>
          </section>
        </form>
        <div
          class="relative w-full border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground border-l-[6px] border-y-0 border-r-0 border-cyan-500 bg-cyan-300/10 rounded-none mb-8 items-center flex py-8 px-14 flex-row text-sm justify-center gap-24"
          role="alert"
        >
          <p
            class="text-lg"
          >
            Do you have questions or need support?
          </p>
          <a
            data-discover="true"
            href="/faq"
            target="_blank"
          >
            <button
              class="inline-flex items-center justify-center text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none bg-primary text-slate-50 hover:bg-primary-dark disabled:bg-[#E3E3E3] disabled:text-[#4F4F4F] h-11 rounded-md px-8 mx-4"
            >
              View FAQs
            </button>
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="max-w-screen-xl mx-auto px-4 lg:px-8"
    >
      <nav
        aria-label="breadcrumbs for spa or waiver choices"
        class="my-4"
        role="navigation"
      >
        <ul
          class="flex flex-wrap gap-1"
        >
          <li
            class="flex items-center text-sm"
          >
            <span>
              <svg
                class="lucide lucide-chevron-right w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </span>
            <a
              class="underline text-sky-700 hover:text-sky-800"
              data-discover="true"
              href="/dashboard?tab=waivers"
            >
              Dashboard
            </a>
          </li>
          <li
            class="flex items-center text-sm"
          >
            <span>
              <svg
                class="lucide lucide-chevron-right w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </span>
            <a
              class="underline text-sky-700 hover:text-sky-800"
              data-discover="true"
              href="/details/1915(b)/VA-2234.R11.02"
            >
              VA-2234.R11.02
            </a>
          </li>
          <li
            class="flex items-center text-sm"
          >
            <span>
              <svg
                class="lucide lucide-chevron-right w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </span>
            <span
              aria-disabled="true"
              class="whitespace-nowrap"
            >
              Enable Formal RAI Response Withdraw
            </span>
          </li>
        </ul>
      </nav>
      <form
        class="my-6 space-y-8 mx-auto justify-center flex flex-col"
      >
        <section
          class="p-4 border rounded-sm border-cardBorder"
          data-testid="detail-section"
        >
          <h1
            class="text-3xl font-semibold mb-2"
            data-testid="detail-section-title"
          >
            Enable Formal RAI Response Withdraw Details
          </h1>
          <hr
            class="my-6 bg-slate-200"
          />
          <div
            class="gap-8 flex flex-col"
            data-testid="detail-section-child"
          >
            <div>
              <div
                class="mt-4"
              >
                Once you submit this form, the most recent Formal RAI Response for this package will be able to be withdrawn by the state
              </div>
            </div>
            <section
              class="flex flex-col mb-8 space-y-8"
            >
              <div>
                <p
                  class="font-bold"
                >
                  Waiver Number
                </p>
                <p
                  class="text-xl"
                >
                  VA-2234.R11.02
                </p>
              </div>
              <div>
                <p
                  class="font-bold"
                >
                  Authority
                </p>
                <p
                  class="text-xl"
                >
                  1915(b) Waiver
                </p>
              </div>
            </section>
          </div>
        </section>
        <section
          class="flex justify-end gap-2 p-4 ml-auto"
        >
          <button
            aria-disabled="true"
            class="inline-flex items-center justify-center rounded-md text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none bg-primary text-slate-50 hover:bg-primary-dark disabled:bg-[#E3E3E3] disabled:text-[#4F4F4F] h-10 py-2 px-12"
            data-testid="submit-action-form"
            disabled=""
            type="submit"
          >
            Submit
          </button>
          <button
            class="inline-flex items-center justify-center rounded-md text-[16px] ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none border-2 border-primary text-primary font-bold hover:bg-primary/10 disabled:opacity-50 h-10 py-2 px-12"
            data-testid="cancel-action-form"
            type="reset"
          >
            Cancel
          </button>
        </section>
      </form>
      <div
        class="relative w-full border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground border-l-[6px] border-y-0 border-r-0 border-cyan-500 bg-cyan-300/10 rounded-none mb-8 items-center flex py-8 px-14 flex-row text-sm justify-center gap-24"
        role="alert"
      >
        <p
          class="text-lg"
        >
          Do you have questions or need support?
        </p>
        <a
          data-discover="true"
          href="/faq"
          target="_blank"
        >
          <button
            class="inline-flex items-center justify-center text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none bg-primary text-slate-50 hover:bg-primary-dark disabled:bg-[#E3E3E3] disabled:text-[#4F4F4F] h-11 rounded-md px-8 mx-4"
          >
            View FAQs
          </button>
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryClient": QueryClient {
    "defaultOptions": {
      "queries": {
        "retry": false,
      },
    },
    "logger": {
      "error": [Function],
      "log": [Function],
      "warn": [Function],
    },
    "mountCount": 1,
    "mutationCache": MutationCache {
      "config": {},
      "listeners": Set {},
      "mutationId": 0,
      "mutations": [],
      "subscribe": [Function],
    },
    "mutationDefaults": [],
    "queryCache": QueryCache {
      "config": {},
      "listeners": Set {},
      "queries": [
        Query {
          "abortSignalConsumed": false,
          "cache": [Circular],
          "cacheTime": 300000,
          "defaultOptions": undefined,
          "gcTimeout": Timeout {
            "_destroyed": false,
            "_idleNext": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": [Circular],
              "expiry": 303410,
              "id": -9007199254740977,
              "msecs": 300000,
              "priorityQueuePosition": 4,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": [Circular],
              "expiry": 303410,
              "id": -9007199254740977,
              "msecs": 300000,
              "priorityQueuePosition": 4,
            },
            "_idleStart": 3410,
            "_idleTimeout": 300000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): true,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 8818,
            Symbol(triggerId): 0,
          },
          "initialState": {
            "data": undefined,
            "dataUpdateCount": 0,
            "dataUpdatedAt": 0,
            "error": null,
            "errorUpdateCount": 0,
            "errorUpdatedAt": 0,
            "fetchFailureCount": 0,
            "fetchFailureReason": null,
            "fetchMeta": null,
            "fetchStatus": "idle",
            "isInvalidated": false,
            "status": "loading",
          },
          "isFetchingOptimistic": false,
          "logger": {
            "error": [Function],
            "log": [Function],
            "warn": [Function],
          },
          "observers": [
            QueryObserver {
              "client": [Circular],
              "currentQuery": [Circular],
              "currentQueryInitialState": {
                "data": undefined,
                "dataUpdateCount": 0,
                "dataUpdatedAt": 0,
                "error": null,
                "errorUpdateCount": 0,
                "errorUpdatedAt": 0,
                "fetchFailureCount": 0,
                "fetchFailureReason": null,
                "fetchMeta": null,
                "fetchStatus": "idle",
                "isInvalidated": false,
                "status": "loading",
              },
              "currentRefetchInterval": false,
              "currentResult": {
                "data": {
                  "isCms": true,
                  "user": {
                    "custom:cms-roles": "onemac-state-user",
                    "custom:state": "VA,OH,SC,CO,GA,MD",
                    "email": "mako.stateuser@gmail.com",
                    "email_verified": "true",
                    "family_name": "Tester",
                    "given_name": "Stateuser",
                    "role": "statesubmitter",
                    "states": [
                      "VA",
                      "OH",
                      "SC",
                      "CO",
                      "GA",
                      "MD",
                    ],
                    "sub": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                    "username": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                  },
                },
                "dataUpdatedAt": 1754411817107,
                "error": null,
                "errorUpdateCount": 0,
                "errorUpdatedAt": 0,
                "failureCount": 0,
                "failureReason": null,
                "fetchStatus": "idle",
                "isError": false,
                "isFetched": true,
                "isFetchedAfterMount": true,
                "isFetching": false,
                "isInitialLoading": false,
                "isLoading": false,
                "isLoadingError": false,
                "isPaused": false,
                "isPlaceholderData": false,
                "isPreviousData": false,
                "isRefetchError": false,
                "isRefetching": false,
                "isStale": true,
                "isSuccess": true,
                "refetch": [Function],
                "remove": [Function],
                "status": "success",
              },
              "currentResultOptions": {
                "_defaulted": true,
                "_optimisticResults": "optimistic",
                "queryFn": [Function],
                "queryHash": "["user"]",
                "queryKey": [
                  "user",
                ],
                "refetchOnReconnect": true,
                "retry": false,
                "useErrorBoundary": false,
              },
              "currentResultState": {
                "data": {
                  "isCms": true,
                  "user": {
                    "custom:cms-roles": "onemac-state-user",
                    "custom:state": "VA,OH,SC,CO,GA,MD",
                    "email": "mako.stateuser@gmail.com",
                    "email_verified": "true",
                    "family_name": "Tester",
                    "given_name": "Stateuser",
                    "role": "statesubmitter",
                    "states": [
                      "VA",
                      "OH",
                      "SC",
                      "CO",
                      "GA",
                      "MD",
                    ],
                    "sub": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                    "username": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                  },
                },
                "dataUpdateCount": 1,
                "dataUpdatedAt": 1754411817107,
                "error": null,
                "errorUpdateCount": 0,
                "errorUpdatedAt": 0,
                "fetchFailureCount": 0,
                "fetchFailureReason": null,
                "fetchMeta": null,
                "fetchStatus": "idle",
                "isInvalidated": false,
                "status": "success",
              },
              "listeners": Set {
                {
                  "listener": [Function],
                },
              },
              "options": {
                "_defaulted": true,
                "_optimisticResults": "optimistic",
                "queryFn": [Function],
                "queryHash": "["user"]",
                "queryKey": [
                  "user",
                ],
                "refetchOnReconnect": true,
                "retry": false,
                "useErrorBoundary": false,
              },
              "previousQueryResult": undefined,
              "refetch": [Function],
              "remove": [Function],
              "selectError": null,
              "subscribe": [Function],
              "trackedProps": Set {
                "data",
                "isLoading",
              },
            },
          ],
          "options": {
            "_defaulted": true,
            "_optimisticResults": "optimistic",
            "queryFn": [Function],
            "queryHash": "["user"]",
            "queryKey": [
              "user",
            ],
            "refetchOnReconnect": true,
            "retry": false,
            "useErrorBoundary": false,
          },
          "promise": Promise {},
          "queryHash": "["user"]",
          "queryKey": [
            "user",
          ],
          "retryer": {
            "cancel": [Function],
            "cancelRetry": [Function],
            "continue": [Function],
            "continueRetry": [Function],
            "promise": Promise {},
          },
          "revertState": {
            "data": undefined,
            "dataUpdateCount": 0,
            "dataUpdatedAt": 0,
            "error": null,
            "errorUpdateCount": 0,
            "errorUpdatedAt": 0,
            "fetchFailureCount": 0,
            "fetchFailureReason": null,
            "fetchMeta": null,
            "fetchStatus": "idle",
            "isInvalidated": false,
            "status": "loading",
          },
          "state": {
            "data": {
              "isCms": true,
              "user": {
                "custom:cms-roles": "onemac-state-user",
                "custom:state": "VA,OH,SC,CO,GA,MD",
                "email": "mako.stateuser@gmail.com",
                "email_verified": "true",
                "family_name": "Tester",
                "given_name": "Stateuser",
                "role": "statesubmitter",
                "states": [
                  "VA",
                  "OH",
                  "SC",
                  "CO",
                  "GA",
                  "MD",
                ],
                "sub": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                "username": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
              },
            },
            "dataUpdateCount": 1,
            "dataUpdatedAt": 1754411817107,
            "error": null,
            "errorUpdateCount": 0,
            "errorUpdatedAt": 0,
            "fetchFailureCount": 0,
            "fetchFailureReason": null,
            "fetchMeta": null,
            "fetchStatus": "idle",
            "isInvalidated": false,
            "status": "success",
          },
        },
      ],
      "queriesMap": {
        "["user"]": Query {
          "abortSignalConsumed": false,
          "cache": [Circular],
          "cacheTime": 300000,
          "defaultOptions": undefined,
          "gcTimeout": Timeout {
            "_destroyed": false,
            "_idleNext": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": [Circular],
              "expiry": 303410,
              "id": -9007199254740977,
              "msecs": 300000,
              "priorityQueuePosition": 4,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": [Circular],
              "expiry": 303410,
              "id": -9007199254740977,
              "msecs": 300000,
              "priorityQueuePosition": 4,
            },
            "_idleStart": 3410,
            "_idleTimeout": 300000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): true,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 8818,
            Symbol(triggerId): 0,
          },
          "initialState": {
            "data": undefined,
            "dataUpdateCount": 0,
            "dataUpdatedAt": 0,
            "error": null,
            "errorUpdateCount": 0,
            "errorUpdatedAt": 0,
            "fetchFailureCount": 0,
            "fetchFailureReason": null,
            "fetchMeta": null,
            "fetchStatus": "idle",
            "isInvalidated": false,
            "status": "loading",
          },
          "isFetchingOptimistic": false,
          "logger": {
            "error": [Function],
            "log": [Function],
            "warn": [Function],
          },
          "observers": [
            QueryObserver {
              "client": [Circular],
              "currentQuery": [Circular],
              "currentQueryInitialState": {
                "data": undefined,
                "dataUpdateCount": 0,
                "dataUpdatedAt": 0,
                "error": null,
                "errorUpdateCount": 0,
                "errorUpdatedAt": 0,
                "fetchFailureCount": 0,
                "fetchFailureReason": null,
                "fetchMeta": null,
                "fetchStatus": "idle",
                "isInvalidated": false,
                "status": "loading",
              },
              "currentRefetchInterval": false,
              "currentResult": {
                "data": {
                  "isCms": true,
                  "user": {
                    "custom:cms-roles": "onemac-state-user",
                    "custom:state": "VA,OH,SC,CO,GA,MD",
                    "email": "mako.stateuser@gmail.com",
                    "email_verified": "true",
                    "family_name": "Tester",
                    "given_name": "Stateuser",
                    "role": "statesubmitter",
                    "states": [
                      "VA",
                      "OH",
                      "SC",
                      "CO",
                      "GA",
                      "MD",
                    ],
                    "sub": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                    "username": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                  },
                },
                "dataUpdatedAt": 1754411817107,
                "error": null,
                "errorUpdateCount": 0,
                "errorUpdatedAt": 0,
                "failureCount": 0,
                "failureReason": null,
                "fetchStatus": "idle",
                "isError": false,
                "isFetched": true,
                "isFetchedAfterMount": true,
                "isFetching": false,
                "isInitialLoading": false,
                "isLoading": false,
                "isLoadingError": false,
                "isPaused": false,
                "isPlaceholderData": false,
                "isPreviousData": false,
                "isRefetchError": false,
                "isRefetching": false,
                "isStale": true,
                "isSuccess": true,
                "refetch": [Function],
                "remove": [Function],
                "status": "success",
              },
              "currentResultOptions": {
                "_defaulted": true,
                "_optimisticResults": "optimistic",
                "queryFn": [Function],
                "queryHash": "["user"]",
                "queryKey": [
                  "user",
                ],
                "refetchOnReconnect": true,
                "retry": false,
                "useErrorBoundary": false,
              },
              "currentResultState": {
                "data": {
                  "isCms": true,
                  "user": {
                    "custom:cms-roles": "onemac-state-user",
                    "custom:state": "VA,OH,SC,CO,GA,MD",
                    "email": "mako.stateuser@gmail.com",
                    "email_verified": "true",
                    "family_name": "Tester",
                    "given_name": "Stateuser",
                    "role": "statesubmitter",
                    "states": [
                      "VA",
                      "OH",
                      "SC",
                      "CO",
                      "GA",
                      "MD",
                    ],
                    "sub": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                    "username": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                  },
                },
                "dataUpdateCount": 1,
                "dataUpdatedAt": 1754411817107,
                "error": null,
                "errorUpdateCount": 0,
                "errorUpdatedAt": 0,
                "fetchFailureCount": 0,
                "fetchFailureReason": null,
                "fetchMeta": null,
                "fetchStatus": "idle",
                "isInvalidated": false,
                "status": "success",
              },
              "listeners": Set {
                {
                  "listener": [Function],
                },
              },
              "options": {
                "_defaulted": true,
                "_optimisticResults": "optimistic",
                "queryFn": [Function],
                "queryHash": "["user"]",
                "queryKey": [
                  "user",
                ],
                "refetchOnReconnect": true,
                "retry": false,
                "useErrorBoundary": false,
              },
              "previousQueryResult": undefined,
              "refetch": [Function],
              "remove": [Function],
              "selectError": null,
              "subscribe": [Function],
              "trackedProps": Set {
                "data",
                "isLoading",
              },
            },
          ],
          "options": {
            "_defaulted": true,
            "_optimisticResults": "optimistic",
            "queryFn": [Function],
            "queryHash": "["user"]",
            "queryKey": [
              "user",
            ],
            "refetchOnReconnect": true,
            "retry": false,
            "useErrorBoundary": false,
          },
          "promise": Promise {},
          "queryHash": "["user"]",
          "queryKey": [
            "user",
          ],
          "retryer": {
            "cancel": [Function],
            "cancelRetry": [Function],
            "continue": [Function],
            "continueRetry": [Function],
            "promise": Promise {},
          },
          "revertState": {
            "data": undefined,
            "dataUpdateCount": 0,
            "dataUpdatedAt": 0,
            "error": null,
            "errorUpdateCount": 0,
            "errorUpdatedAt": 0,
            "fetchFailureCount": 0,
            "fetchFailureReason": null,
            "fetchMeta": null,
            "fetchStatus": "idle",
            "isInvalidated": false,
            "status": "loading",
          },
          "state": {
            "data": {
              "isCms": true,
              "user": {
                "custom:cms-roles": "onemac-state-user",
                "custom:state": "VA,OH,SC,CO,GA,MD",
                "email": "mako.stateuser@gmail.com",
                "email_verified": "true",
                "family_name": "Tester",
                "given_name": "Stateuser",
                "role": "statesubmitter",
                "states": [
                  "VA",
                  "OH",
                  "SC",
                  "CO",
                  "GA",
                  "MD",
                ],
                "sub": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                "username": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
              },
            },
            "dataUpdateCount": 1,
            "dataUpdatedAt": 1754411817107,
            "error": null,
            "errorUpdateCount": 0,
            "errorUpdatedAt": 0,
            "fetchFailureCount": 0,
            "fetchFailureReason": null,
            "fetchMeta": null,
            "fetchStatus": "idle",
            "isInvalidated": false,
            "status": "success",
          },
        },
      },
      "subscribe": [Function],
    },
    "queryDefaults": [],
    "unsubscribeFocus": [Function],
    "unsubscribeOnline": [Function],
  },
  "rerender": [Function],
  "router": {
    "_internalFetchControllers": Map {},
    "_internalSetRoutes": [Function],
    "basename": "/",
    "createHref": [Function],
    "deleteBlocker": [Function],
    "deleteFetcher": [Function],
    "dispose": [Function],
    "enableScrollRestoration": [Function],
    "encodeLocation": [Function],
    "fetch": [Function],
    "future": {},
    "getBlocker": [Function],
    "getFetcher": [Function],
    "initialize": [Function],
    "navigate": [Function],
    "patchRoutes": [Function],
    "revalidate": [Function],
    "routes": [
      {
        "children": undefined,
        "element": <h1>
          dashboard test
        </h1>,
        "hasErrorBoundary": false,
        "id": "0",
        "path": "/dashboard",
      },
      {
        "children": undefined,
        "element": <EnableWithdrawRaiForm />,
        "hasErrorBoundary": false,
        "id": "1",
        "path": "/test/:authority",
      },
      {
        "children": undefined,
        "element": <EnableWithdrawRaiForm />,
        "hasErrorBoundary": false,
        "id": "2",
        "path": "/test/:id/:authority",
      },
    ],
    "state": {
      "actionData": null,
      "blockers": Map {},
      "errors": null,
      "fetchers": Map {},
      "historyAction": "POP",
      "initialized": true,
      "loaderData": {},
      "location": {
        "hash": "",
        "key": "default",
        "pathname": "/test/Medicaid SPA",
        "search": "",
        "state": null,
      },
      "matches": [
        {
          "params": {
            "authority": "Medicaid SPA",
          },
          "pathname": "/test/Medicaid SPA",
          "pathnameBase": "/test/Medicaid SPA",
          "route": {
            "children": undefined,
            "element": <EnableWithdrawRaiForm />,
            "hasErrorBoundary": false,
            "id": "1",
            "path": "/test/:authority",
          },
        },
      ],
      "navigation": {
        "formAction": undefined,
        "formData": undefined,
        "formEncType": undefined,
        "formMethod": undefined,
        "json": undefined,
        "location": undefined,
        "state": "idle",
        "text": undefined,
      },
      "preventScrollReset": false,
      "restoreScrollPosition": null,
      "revalidation": "idle",
    },
    "subscribe": [Function],
    "window": [Object],
  },
  "unmount": [Function],
}
`;

exports[`Toggle Withdraw Rai components > renders disable withdraw rai correctly 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="max-w-screen-xl mx-auto px-4 lg:px-8"
      >
        <nav
          aria-label="breadcrumbs for spa or waiver choices"
          class="my-4"
          role="navigation"
        >
          <ul
            class="flex flex-wrap gap-1"
          >
            <li
              class="flex items-center text-sm"
            >
              <span>
                <svg
                  class="lucide lucide-chevron-right w-5 h-5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
              <a
                class="underline text-sky-700 hover:text-sky-800"
                data-discover="true"
                href="/dashboard?tab=waivers"
              >
                Dashboard
              </a>
            </li>
            <li
              class="flex items-center text-sm"
            >
              <span>
                <svg
                  class="lucide lucide-chevron-right w-5 h-5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
              <a
                class="underline text-sky-700 hover:text-sky-800"
                data-discover="true"
                href="/details/1915(b)/VA-2234.R11.02"
              >
                VA-2234.R11.02
              </a>
            </li>
            <li
              class="flex items-center text-sm"
            >
              <span>
                <svg
                  class="lucide lucide-chevron-right w-5 h-5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
              <span
                aria-disabled="true"
                class="whitespace-nowrap"
              >
                Disable Formal RAI Response Withdraw
              </span>
            </li>
          </ul>
        </nav>
        <form
          class="my-6 space-y-8 mx-auto justify-center flex flex-col"
        >
          <section
            class="p-4 border rounded-sm border-cardBorder"
            data-testid="detail-section"
          >
            <h1
              class="text-3xl font-semibold mb-2"
              data-testid="detail-section-title"
            >
              Disable Formal RAI Response Withdraw Details
            </h1>
            <hr
              class="my-6 bg-slate-200"
            />
            <div
              class="gap-8 flex flex-col"
              data-testid="detail-section-child"
            >
              <div>
                <div
                  class="mt-4"
                >
                  The state will not be able to withdraw its RAI response. It may take up to a minute for this change to be applied.
                </div>
              </div>
              <section
                class="flex flex-col mb-8 space-y-8"
              >
                <div>
                  <p
                    class="font-bold"
                  >
                    Waiver Number
                  </p>
                  <p
                    class="text-xl"
                  >
                    VA-2234.R11.02
                  </p>
                </div>
                <div>
                  <p
                    class="font-bold"
                  >
                    Authority
                  </p>
                  <p
                    class="text-xl"
                  >
                    1915(b) Waiver
                  </p>
                </div>
              </section>
            </div>
          </section>
          <section
            class="flex justify-end gap-2 p-4 ml-auto"
          >
            <button
              aria-disabled="true"
              class="inline-flex items-center justify-center rounded-md text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none bg-primary text-slate-50 hover:bg-primary-dark disabled:bg-[#E3E3E3] disabled:text-[#4F4F4F] h-10 py-2 px-12"
              data-testid="submit-action-form"
              disabled=""
              type="submit"
            >
              Submit
            </button>
            <button
              class="inline-flex items-center justify-center rounded-md text-[16px] ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none border-2 border-primary text-primary font-bold hover:bg-primary/10 disabled:opacity-50 h-10 py-2 px-12"
              data-testid="cancel-action-form"
              type="reset"
            >
              Cancel
            </button>
          </section>
        </form>
        <div
          class="relative w-full border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground border-l-[6px] border-y-0 border-r-0 border-cyan-500 bg-cyan-300/10 rounded-none mb-8 items-center flex py-8 px-14 flex-row text-sm justify-center gap-24"
          role="alert"
        >
          <p
            class="text-lg"
          >
            Do you have questions or need support?
          </p>
          <a
            data-discover="true"
            href="/faq"
            target="_blank"
          >
            <button
              class="inline-flex items-center justify-center text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none bg-primary text-slate-50 hover:bg-primary-dark disabled:bg-[#E3E3E3] disabled:text-[#4F4F4F] h-11 rounded-md px-8 mx-4"
            >
              View FAQs
            </button>
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="max-w-screen-xl mx-auto px-4 lg:px-8"
    >
      <nav
        aria-label="breadcrumbs for spa or waiver choices"
        class="my-4"
        role="navigation"
      >
        <ul
          class="flex flex-wrap gap-1"
        >
          <li
            class="flex items-center text-sm"
          >
            <span>
              <svg
                class="lucide lucide-chevron-right w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </span>
            <a
              class="underline text-sky-700 hover:text-sky-800"
              data-discover="true"
              href="/dashboard?tab=waivers"
            >
              Dashboard
            </a>
          </li>
          <li
            class="flex items-center text-sm"
          >
            <span>
              <svg
                class="lucide lucide-chevron-right w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </span>
            <a
              class="underline text-sky-700 hover:text-sky-800"
              data-discover="true"
              href="/details/1915(b)/VA-2234.R11.02"
            >
              VA-2234.R11.02
            </a>
          </li>
          <li
            class="flex items-center text-sm"
          >
            <span>
              <svg
                class="lucide lucide-chevron-right w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </span>
            <span
              aria-disabled="true"
              class="whitespace-nowrap"
            >
              Disable Formal RAI Response Withdraw
            </span>
          </li>
        </ul>
      </nav>
      <form
        class="my-6 space-y-8 mx-auto justify-center flex flex-col"
      >
        <section
          class="p-4 border rounded-sm border-cardBorder"
          data-testid="detail-section"
        >
          <h1
            class="text-3xl font-semibold mb-2"
            data-testid="detail-section-title"
          >
            Disable Formal RAI Response Withdraw Details
          </h1>
          <hr
            class="my-6 bg-slate-200"
          />
          <div
            class="gap-8 flex flex-col"
            data-testid="detail-section-child"
          >
            <div>
              <div
                class="mt-4"
              >
                The state will not be able to withdraw its RAI response. It may take up to a minute for this change to be applied.
              </div>
            </div>
            <section
              class="flex flex-col mb-8 space-y-8"
            >
              <div>
                <p
                  class="font-bold"
                >
                  Waiver Number
                </p>
                <p
                  class="text-xl"
                >
                  VA-2234.R11.02
                </p>
              </div>
              <div>
                <p
                  class="font-bold"
                >
                  Authority
                </p>
                <p
                  class="text-xl"
                >
                  1915(b) Waiver
                </p>
              </div>
            </section>
          </div>
        </section>
        <section
          class="flex justify-end gap-2 p-4 ml-auto"
        >
          <button
            aria-disabled="true"
            class="inline-flex items-center justify-center rounded-md text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none bg-primary text-slate-50 hover:bg-primary-dark disabled:bg-[#E3E3E3] disabled:text-[#4F4F4F] h-10 py-2 px-12"
            data-testid="submit-action-form"
            disabled=""
            type="submit"
          >
            Submit
          </button>
          <button
            class="inline-flex items-center justify-center rounded-md text-[16px] ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none border-2 border-primary text-primary font-bold hover:bg-primary/10 disabled:opacity-50 h-10 py-2 px-12"
            data-testid="cancel-action-form"
            type="reset"
          >
            Cancel
          </button>
        </section>
      </form>
      <div
        class="relative w-full border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground border-l-[6px] border-y-0 border-r-0 border-cyan-500 bg-cyan-300/10 rounded-none mb-8 items-center flex py-8 px-14 flex-row text-sm justify-center gap-24"
        role="alert"
      >
        <p
          class="text-lg"
        >
          Do you have questions or need support?
        </p>
        <a
          data-discover="true"
          href="/faq"
          target="_blank"
        >
          <button
            class="inline-flex items-center justify-center text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none bg-primary text-slate-50 hover:bg-primary-dark disabled:bg-[#E3E3E3] disabled:text-[#4F4F4F] h-11 rounded-md px-8 mx-4"
          >
            View FAQs
          </button>
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryClient": QueryClient {
    "defaultOptions": {
      "queries": {
        "retry": false,
      },
    },
    "logger": {
      "error": [Function],
      "log": [Function],
      "warn": [Function],
    },
    "mountCount": 1,
    "mutationCache": MutationCache {
      "config": {},
      "listeners": Set {},
      "mutationId": 0,
      "mutations": [],
      "subscribe": [Function],
    },
    "mutationDefaults": [],
    "queryCache": QueryCache {
      "config": {},
      "listeners": Set {},
      "queries": [
        Query {
          "abortSignalConsumed": false,
          "cache": [Circular],
          "cacheTime": 300000,
          "defaultOptions": undefined,
          "gcTimeout": Timeout {
            "_destroyed": false,
            "_idleNext": Timeout {
              "_destroyed": false,
              "_idleNext": TimersList {
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "expiry": 303431,
                "id": -9007199254740974,
                "msecs": 300000,
                "priorityQueuePosition": 4,
              },
              "_idlePrev": [Circular],
              "_idleStart": 3431,
              "_idleTimeout": 300000,
              "_onTimeout": [Function],
              "_repeat": null,
              "_timerArgs": undefined,
              Symbol(refed): true,
              Symbol(kHasPrimitive): false,
              Symbol(asyncId): 8827,
              Symbol(triggerId): 0,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": Timeout {
                "_destroyed": false,
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "_idleStart": 3431,
                "_idleTimeout": 300000,
                "_onTimeout": [Function],
                "_repeat": null,
                "_timerArgs": undefined,
                Symbol(refed): true,
                Symbol(kHasPrimitive): false,
                Symbol(asyncId): 8827,
                Symbol(triggerId): 0,
              },
              "expiry": 303431,
              "id": -9007199254740974,
              "msecs": 300000,
              "priorityQueuePosition": 4,
            },
            "_idleStart": 3454,
            "_idleTimeout": 300000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): true,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 8839,
            Symbol(triggerId): 0,
          },
          "initialState": {
            "data": undefined,
            "dataUpdateCount": 0,
            "dataUpdatedAt": 0,
            "error": null,
            "errorUpdateCount": 0,
            "errorUpdatedAt": 0,
            "fetchFailureCount": 0,
            "fetchFailureReason": null,
            "fetchMeta": null,
            "fetchStatus": "idle",
            "isInvalidated": false,
            "status": "loading",
          },
          "isFetchingOptimistic": false,
          "logger": {
            "error": [Function],
            "log": [Function],
            "warn": [Function],
          },
          "observers": [
            QueryObserver {
              "client": [Circular],
              "currentQuery": [Circular],
              "currentQueryInitialState": {
                "data": undefined,
                "dataUpdateCount": 0,
                "dataUpdatedAt": 0,
                "error": null,
                "errorUpdateCount": 0,
                "errorUpdatedAt": 0,
                "fetchFailureCount": 0,
                "fetchFailureReason": null,
                "fetchMeta": null,
                "fetchStatus": "idle",
                "isInvalidated": false,
                "status": "loading",
              },
              "currentRefetchInterval": false,
              "currentResult": {
                "data": {
                  "isCms": true,
                  "user": {
                    "custom:cms-roles": "onemac-state-user",
                    "custom:state": "VA,OH,SC,CO,GA,MD",
                    "email": "mako.stateuser@gmail.com",
                    "email_verified": "true",
                    "family_name": "Tester",
                    "given_name": "Stateuser",
                    "role": "statesubmitter",
                    "states": [
                      "VA",
                      "OH",
                      "SC",
                      "CO",
                      "GA",
                      "MD",
                    ],
                    "sub": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                    "username": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                  },
                },
                "dataUpdatedAt": 1754411817152,
                "error": null,
                "errorUpdateCount": 0,
                "errorUpdatedAt": 0,
                "failureCount": 0,
                "failureReason": null,
                "fetchStatus": "idle",
                "isError": false,
                "isFetched": true,
                "isFetchedAfterMount": true,
                "isFetching": false,
                "isInitialLoading": false,
                "isLoading": false,
                "isLoadingError": false,
                "isPaused": false,
                "isPlaceholderData": false,
                "isPreviousData": false,
                "isRefetchError": false,
                "isRefetching": false,
                "isStale": true,
                "isSuccess": true,
                "refetch": [Function],
                "remove": [Function],
                "status": "success",
              },
              "currentResultOptions": {
                "_defaulted": true,
                "_optimisticResults": "optimistic",
                "queryFn": [Function],
                "queryHash": "["user"]",
                "queryKey": [
                  "user",
                ],
                "refetchOnReconnect": true,
                "retry": false,
                "useErrorBoundary": false,
              },
              "currentResultState": {
                "data": {
                  "isCms": true,
                  "user": {
                    "custom:cms-roles": "onemac-state-user",
                    "custom:state": "VA,OH,SC,CO,GA,MD",
                    "email": "mako.stateuser@gmail.com",
                    "email_verified": "true",
                    "family_name": "Tester",
                    "given_name": "Stateuser",
                    "role": "statesubmitter",
                    "states": [
                      "VA",
                      "OH",
                      "SC",
                      "CO",
                      "GA",
                      "MD",
                    ],
                    "sub": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                    "username": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                  },
                },
                "dataUpdateCount": 1,
                "dataUpdatedAt": 1754411817152,
                "error": null,
                "errorUpdateCount": 0,
                "errorUpdatedAt": 0,
                "fetchFailureCount": 0,
                "fetchFailureReason": null,
                "fetchMeta": null,
                "fetchStatus": "idle",
                "isInvalidated": false,
                "status": "success",
              },
              "listeners": Set {
                {
                  "listener": [Function],
                },
              },
              "options": {
                "_defaulted": true,
                "_optimisticResults": "optimistic",
                "queryFn": [Function],
                "queryHash": "["user"]",
                "queryKey": [
                  "user",
                ],
                "refetchOnReconnect": true,
                "retry": false,
                "useErrorBoundary": false,
              },
              "previousQueryResult": undefined,
              "refetch": [Function],
              "remove": [Function],
              "selectError": null,
              "subscribe": [Function],
              "trackedProps": Set {
                "data",
                "isLoading",
              },
            },
          ],
          "options": {
            "_defaulted": true,
            "_optimisticResults": "optimistic",
            "queryFn": [Function],
            "queryHash": "["user"]",
            "queryKey": [
              "user",
            ],
            "refetchOnReconnect": true,
            "retry": false,
            "useErrorBoundary": false,
          },
          "promise": Promise {},
          "queryHash": "["user"]",
          "queryKey": [
            "user",
          ],
          "retryer": {
            "cancel": [Function],
            "cancelRetry": [Function],
            "continue": [Function],
            "continueRetry": [Function],
            "promise": Promise {},
          },
          "revertState": {
            "data": undefined,
            "dataUpdateCount": 0,
            "dataUpdatedAt": 0,
            "error": null,
            "errorUpdateCount": 0,
            "errorUpdatedAt": 0,
            "fetchFailureCount": 0,
            "fetchFailureReason": null,
            "fetchMeta": null,
            "fetchStatus": "idle",
            "isInvalidated": false,
            "status": "loading",
          },
          "state": {
            "data": {
              "isCms": true,
              "user": {
                "custom:cms-roles": "onemac-state-user",
                "custom:state": "VA,OH,SC,CO,GA,MD",
                "email": "mako.stateuser@gmail.com",
                "email_verified": "true",
                "family_name": "Tester",
                "given_name": "Stateuser",
                "role": "statesubmitter",
                "states": [
                  "VA",
                  "OH",
                  "SC",
                  "CO",
                  "GA",
                  "MD",
                ],
                "sub": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                "username": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
              },
            },
            "dataUpdateCount": 1,
            "dataUpdatedAt": 1754411817152,
            "error": null,
            "errorUpdateCount": 0,
            "errorUpdatedAt": 0,
            "fetchFailureCount": 0,
            "fetchFailureReason": null,
            "fetchMeta": null,
            "fetchStatus": "idle",
            "isInvalidated": false,
            "status": "success",
          },
        },
      ],
      "queriesMap": {
        "["user"]": Query {
          "abortSignalConsumed": false,
          "cache": [Circular],
          "cacheTime": 300000,
          "defaultOptions": undefined,
          "gcTimeout": Timeout {
            "_destroyed": false,
            "_idleNext": Timeout {
              "_destroyed": false,
              "_idleNext": TimersList {
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "expiry": 303431,
                "id": -9007199254740974,
                "msecs": 300000,
                "priorityQueuePosition": 4,
              },
              "_idlePrev": [Circular],
              "_idleStart": 3431,
              "_idleTimeout": 300000,
              "_onTimeout": [Function],
              "_repeat": null,
              "_timerArgs": undefined,
              Symbol(refed): true,
              Symbol(kHasPrimitive): false,
              Symbol(asyncId): 8827,
              Symbol(triggerId): 0,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": Timeout {
                "_destroyed": false,
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "_idleStart": 3431,
                "_idleTimeout": 300000,
                "_onTimeout": [Function],
                "_repeat": null,
                "_timerArgs": undefined,
                Symbol(refed): true,
                Symbol(kHasPrimitive): false,
                Symbol(asyncId): 8827,
                Symbol(triggerId): 0,
              },
              "expiry": 303431,
              "id": -9007199254740974,
              "msecs": 300000,
              "priorityQueuePosition": 4,
            },
            "_idleStart": 3454,
            "_idleTimeout": 300000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): true,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 8839,
            Symbol(triggerId): 0,
          },
          "initialState": {
            "data": undefined,
            "dataUpdateCount": 0,
            "dataUpdatedAt": 0,
            "error": null,
            "errorUpdateCount": 0,
            "errorUpdatedAt": 0,
            "fetchFailureCount": 0,
            "fetchFailureReason": null,
            "fetchMeta": null,
            "fetchStatus": "idle",
            "isInvalidated": false,
            "status": "loading",
          },
          "isFetchingOptimistic": false,
          "logger": {
            "error": [Function],
            "log": [Function],
            "warn": [Function],
          },
          "observers": [
            QueryObserver {
              "client": [Circular],
              "currentQuery": [Circular],
              "currentQueryInitialState": {
                "data": undefined,
                "dataUpdateCount": 0,
                "dataUpdatedAt": 0,
                "error": null,
                "errorUpdateCount": 0,
                "errorUpdatedAt": 0,
                "fetchFailureCount": 0,
                "fetchFailureReason": null,
                "fetchMeta": null,
                "fetchStatus": "idle",
                "isInvalidated": false,
                "status": "loading",
              },
              "currentRefetchInterval": false,
              "currentResult": {
                "data": {
                  "isCms": true,
                  "user": {
                    "custom:cms-roles": "onemac-state-user",
                    "custom:state": "VA,OH,SC,CO,GA,MD",
                    "email": "mako.stateuser@gmail.com",
                    "email_verified": "true",
                    "family_name": "Tester",
                    "given_name": "Stateuser",
                    "role": "statesubmitter",
                    "states": [
                      "VA",
                      "OH",
                      "SC",
                      "CO",
                      "GA",
                      "MD",
                    ],
                    "sub": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                    "username": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                  },
                },
                "dataUpdatedAt": 1754411817152,
                "error": null,
                "errorUpdateCount": 0,
                "errorUpdatedAt": 0,
                "failureCount": 0,
                "failureReason": null,
                "fetchStatus": "idle",
                "isError": false,
                "isFetched": true,
                "isFetchedAfterMount": true,
                "isFetching": false,
                "isInitialLoading": false,
                "isLoading": false,
                "isLoadingError": false,
                "isPaused": false,
                "isPlaceholderData": false,
                "isPreviousData": false,
                "isRefetchError": false,
                "isRefetching": false,
                "isStale": true,
                "isSuccess": true,
                "refetch": [Function],
                "remove": [Function],
                "status": "success",
              },
              "currentResultOptions": {
                "_defaulted": true,
                "_optimisticResults": "optimistic",
                "queryFn": [Function],
                "queryHash": "["user"]",
                "queryKey": [
                  "user",
                ],
                "refetchOnReconnect": true,
                "retry": false,
                "useErrorBoundary": false,
              },
              "currentResultState": {
                "data": {
                  "isCms": true,
                  "user": {
                    "custom:cms-roles": "onemac-state-user",
                    "custom:state": "VA,OH,SC,CO,GA,MD",
                    "email": "mako.stateuser@gmail.com",
                    "email_verified": "true",
                    "family_name": "Tester",
                    "given_name": "Stateuser",
                    "role": "statesubmitter",
                    "states": [
                      "VA",
                      "OH",
                      "SC",
                      "CO",
                      "GA",
                      "MD",
                    ],
                    "sub": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                    "username": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                  },
                },
                "dataUpdateCount": 1,
                "dataUpdatedAt": 1754411817152,
                "error": null,
                "errorUpdateCount": 0,
                "errorUpdatedAt": 0,
                "fetchFailureCount": 0,
                "fetchFailureReason": null,
                "fetchMeta": null,
                "fetchStatus": "idle",
                "isInvalidated": false,
                "status": "success",
              },
              "listeners": Set {
                {
                  "listener": [Function],
                },
              },
              "options": {
                "_defaulted": true,
                "_optimisticResults": "optimistic",
                "queryFn": [Function],
                "queryHash": "["user"]",
                "queryKey": [
                  "user",
                ],
                "refetchOnReconnect": true,
                "retry": false,
                "useErrorBoundary": false,
              },
              "previousQueryResult": undefined,
              "refetch": [Function],
              "remove": [Function],
              "selectError": null,
              "subscribe": [Function],
              "trackedProps": Set {
                "data",
                "isLoading",
              },
            },
          ],
          "options": {
            "_defaulted": true,
            "_optimisticResults": "optimistic",
            "queryFn": [Function],
            "queryHash": "["user"]",
            "queryKey": [
              "user",
            ],
            "refetchOnReconnect": true,
            "retry": false,
            "useErrorBoundary": false,
          },
          "promise": Promise {},
          "queryHash": "["user"]",
          "queryKey": [
            "user",
          ],
          "retryer": {
            "cancel": [Function],
            "cancelRetry": [Function],
            "continue": [Function],
            "continueRetry": [Function],
            "promise": Promise {},
          },
          "revertState": {
            "data": undefined,
            "dataUpdateCount": 0,
            "dataUpdatedAt": 0,
            "error": null,
            "errorUpdateCount": 0,
            "errorUpdatedAt": 0,
            "fetchFailureCount": 0,
            "fetchFailureReason": null,
            "fetchMeta": null,
            "fetchStatus": "idle",
            "isInvalidated": false,
            "status": "loading",
          },
          "state": {
            "data": {
              "isCms": true,
              "user": {
                "custom:cms-roles": "onemac-state-user",
                "custom:state": "VA,OH,SC,CO,GA,MD",
                "email": "mako.stateuser@gmail.com",
                "email_verified": "true",
                "family_name": "Tester",
                "given_name": "Stateuser",
                "role": "statesubmitter",
                "states": [
                  "VA",
                  "OH",
                  "SC",
                  "CO",
                  "GA",
                  "MD",
                ],
                "sub": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
                "username": "cd400c39-9e7c-4341-b62f-234e2ecb339d",
              },
            },
            "dataUpdateCount": 1,
            "dataUpdatedAt": 1754411817152,
            "error": null,
            "errorUpdateCount": 0,
            "errorUpdatedAt": 0,
            "fetchFailureCount": 0,
            "fetchFailureReason": null,
            "fetchMeta": null,
            "fetchStatus": "idle",
            "isInvalidated": false,
            "status": "success",
          },
        },
      },
      "subscribe": [Function],
    },
    "queryDefaults": [],
    "unsubscribeFocus": [Function],
    "unsubscribeOnline": [Function],
  },
  "rerender": [Function],
  "router": {
    "_internalFetchControllers": Map {},
    "_internalSetRoutes": [Function],
    "basename": "/",
    "createHref": [Function],
    "deleteBlocker": [Function],
    "deleteFetcher": [Function],
    "dispose": [Function],
    "enableScrollRestoration": [Function],
    "encodeLocation": [Function],
    "fetch": [Function],
    "future": {},
    "getBlocker": [Function],
    "getFetcher": [Function],
    "initialize": [Function],
    "navigate": [Function],
    "patchRoutes": [Function],
    "revalidate": [Function],
    "routes": [
      {
        "children": undefined,
        "element": <h1>
          dashboard test
        </h1>,
        "hasErrorBoundary": false,
        "id": "0",
        "path": "/dashboard",
      },
      {
        "children": undefined,
        "element": <DisableWithdrawRaiForm />,
        "hasErrorBoundary": false,
        "id": "1",
        "path": "/test/:authority",
      },
      {
        "children": undefined,
        "element": <DisableWithdrawRaiForm />,
        "hasErrorBoundary": false,
        "id": "2",
        "path": "/test/:id/:authority",
      },
    ],
    "state": {
      "actionData": null,
      "blockers": Map {},
      "errors": null,
      "fetchers": Map {},
      "historyAction": "POP",
      "initialized": true,
      "loaderData": {},
      "location": {
        "hash": "",
        "key": "default",
        "pathname": "/test/Medicaid SPA",
        "search": "",
        "state": null,
      },
      "matches": [
        {
          "params": {
            "authority": "Medicaid SPA",
          },
          "pathname": "/test/Medicaid SPA",
          "pathnameBase": "/test/Medicaid SPA",
          "route": {
            "children": undefined,
            "element": <DisableWithdrawRaiForm />,
            "hasErrorBoundary": false,
            "id": "1",
            "path": "/test/:authority",
          },
        },
      ],
      "navigation": {
        "formAction": undefined,
        "formData": undefined,
        "formEncType": undefined,
        "formMethod": undefined,
        "json": undefined,
        "location": undefined,
        "state": "idle",
        "text": undefined,
      },
      "preventScrollReset": false,
      "restoreScrollPosition": null,
      "revalidation": "idle",
    },
    "subscribe": [Function],
    "window": [Object],
  },
  "unmount": [Function],
}
`;
